<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="casual">Casual</string>
    <string name="tournement">Tournament</string>
    <string name="multi_player">Multi-Player</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_intro_text">Navigate to different counters here!</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="first_seen_match_hstory_drawer">Match history available in this drawer</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="no">No</string>
    <string name="set">Set</string>
    <string name="preference_screen_timeout_summary">Seconds Until Screen Dims</string>
    <string name="preference_screen_timeout_title">Screen Dimming</string>
    <string name="version">Version</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="view_source">View Source</string>
    <string name="view_source_summary">Help make this app better! Report a bug or view the source on GitHub</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="roll_d_twenty">Roll D20</string>
    <string name="d20_roll">D20 Roll</string>
    <string name="you_rolled">You rolled: %d</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="reset">Reset</string>
    <string name="show_poision_counters">Show Poison Counters</string>
    <string name="hide_poision_counters">Hide Poison Counters</string>
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="set_theme">Set Theme</string>
    <string name="select_timeout">Select Timeout</string>
    <string name="use_dark_theme">Use Dark Theme</string>
</resources>
