<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="App">
        <ListPreference
            android:key="screen_timeout"
            android:summary="@string/preference_screen_timeout_summary"
            android:title="@string/preference_screen_timeout_title"
            android:dialogTitle="Choose"
            android:entries="@array/preference_screen_timeout_entries"
            android:entryValues="@array/preference_screen_timeout_values"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About">
        <Preference
            android:key="@string/pref_key_version"
            android:title="@string/version"/>

        <Preference
            android:title="@string/view_source"
            android:summary="@string/view_source_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/pieces029/MagicLifeCounter"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>